[package]
name = "ktisis"
version = "0.2.0"
authors = ["chirp (github.com/chrpy)"]
repository = "https://github.com/ktisis-tools/ktisis"
edition = "2021"

[dependencies]
binread = "^2.2.0"
inflate = "^0.4.5"
inner = "^0.1.1"
egui = "^0.18.1"
egui_extras = "^0.18.0"
eframe = { version = "^0.18.0", features = [] }
phf = { version = "0.10", features = ["macros"] }