[package]
name = "ktisis"
version = "0.3.0"
authors = ["chirp (github.com/chrpy)"]
repository = "https://github.com/ktisis-tools/ktisis-lib"
edition = "2021"

[lib]
name = "ktisis"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
binread = "^2.2.0"
inflate = "^0.4.5"
phf = { version = "0.10", features = ["macros"] }